# pisano

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .prettierignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.changes/: config.json
.github/workflows/: covector-version-or-publish.yml  lint-rust.yml  release-nightly.yml
src/: app.tsx  global.css  index.css
src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: circle_plot.rs  main.rs  sequences.rs
src/lib/: Titlebar.svelte
src/lib/i18n/de-DE/: titlebar.json
src/lib/i18n/en-US/: titlebar.json
src/routes/: +layout.svelte  +page.svelte  __layout.svelte  index.svelte
src/stores/: sequence.ts  with-bounding-circle.ts
