[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [ ] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { git = "https://github.com/tauri-apps/tauri", features = [
  "window-maximize",
  "window-show",
  "window-start-dragging",
  "window-unmaximize"
] }
svg = "0.13.0"
url = "2.3.1"
percent-encoding = "2.2.0"
serde_repr = "0.1.10"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
